# ChangeLog for dev-perl/MARC-XML
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/MARC-XML/ChangeLog,v 1.10 2013/08/25 10:20:03 patrick Exp $

*MARC-XML-1.000.100 (25 Aug 2013)

  25 Aug 2013; Patrick Lauer <patrick@gentoo.org> +MARC-XML-1.000.100.ebuild:
  Bump

  18 Nov 2012; Robin H. Johnson <robbat2@gentoo.org> metadata.xml:
  Drop duplication of myself as a maintainer where there is a herd.

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

  04 Sep 2011; Torsten Veller <tove@gentoo.org> -MARC-XML-0.930.ebuild:
  Cleanup

*MARC-XML-0.930.0 (30 Aug 2011)

  30 Aug 2011; Torsten Veller <tove@gentoo.org> +MARC-XML-0.930.0.ebuild:
  Change version scheme

  03 Apr 2011; Torsten Veller <tove@gentoo.org> -MARC-XML-0.92.ebuild:
  Cleanup

*MARC-XML-0.930 (12 Feb 2011)

  12 Feb 2011; Torsten Veller <tove@gentoo.org> +MARC-XML-0.930.ebuild:
  Version bump

  07 Sep 2009; Torsten Veller <tove@gentoo.org> -MARC-XML-0.88.ebuild:
  Cleanup

*MARC-XML-0.92 (25 Aug 2009)

  25 Aug 2009; Robin H. Johnson <robbat2@gentoo.org> +MARC-XML-0.92.ebuild:
  Version bump via perl-bump experimental tool.

*MARC-XML-0.88 (29 Sep 2008)

  29 Sep 2008; Robin H. Johnson <robbat2@gentoo.org> +metadata.xml,
  +MARC-XML-0.88.ebuild:
  New ebuild by Robin H. Johnson <robbat2@gentoo.org>. Dependancy for
  OpenSRF/Evergreen.