@@ -1,6 +1,16 @@
-DIST MARC-XML-0.93.tar.gz 16260 SHA256 897c256f4a4231a7d9ce54dd5924f7b291c07ed5e77fcac0cae3dcc9681421bd SHA512 3275a69eaffc57d0fd521182d73148fdc87620f1d11173170605a8d7a1c1ee88e18533137098e09bbf66e503ed32eb986d2c3c39749ed6a80c6cfe01730b642e WHIRLPOOL 84032a4ea7aa030f0c398f0a82cefff7b00fe6d5dd14377eb36f3651476034bb144b55c384f5c6dc8d32f3b984bdc8205206ea5f36d42952e19bf799fef4b8b4
-DIST MARC-XML-1.0.1.tar.gz 16655 SHA256 1506701b9dab87670ca5b3fe62933c4ab4f345eb828c6682d0adccd69e4841b1 SHA512 bb55faf8d199a8a7c501ef40d90c6359550b1e3f06d544c9f0239f86c7efca861c6824634710f24eaf6f0cdc5177884c792abaee16b65a5e0edcc4a351799d49 WHIRLPOOL 0fc40f4fdc65b30791259f0895236cd9f739efc934715b68d8bcf0d469349aab78c3d76ffe3e707c28f3426527c47bdd63ebebdfa1a065ec3bd544fa1f182a6f
-EBUILD MARC-XML-0.930.0.ebuild 505 SHA256 feff60c679013e1f23f63e712f75713f9290250394856c5b85bdb500c651e673 SHA512 9295bf4bea1ccc7cd6045d8a3c4959777818b47731263c85dc740a76aa313d8b6c9d28b67ef1534fc3528d69b6dbc7ea3aa39c7e98565b41fab17c291a39ddb0 WHIRLPOOL 8957b70be966e68c29f66f6ab56e6cde6914c8f2eee2730c1f3e4374c7594856e3267629ae344aa0136b2ab846fd09675cbadaf4541cfeead206928cd27cc4a2
-EBUILD MARC-XML-1.000.100.ebuild 532 SHA256 202a69ff6a0241e4745fe86dacb56d19002985780349f49d160562b8bc13d908 SHA512 da34bb4f702829bf09f734c5255f19a8197759267da48b684810c472bcf532ae228fc87718b768fb7285bb3976b88e0c006c9d5ec0500ed3e3f975645c4e7f82 WHIRLPOOL e37ef2b2a82abe801a5d213a25b8b64cd9574852aa29033f457dfec38bbe3c71d4355fcf49bf384b6b9ae49ce1fde1225ee9aa5583ba0d75da2c808880dada23
-MISC ChangeLog 1424 SHA256 da13bb2917714a5748e9e876be7e5fb8fe4d906181805ddb25ccc9158e910d53 SHA512 e1a36acad316849cf8a94c35280cc86ad0b81b8098c809af3f224199dc767ead7e79e4f0b06341859ad3ddb79f10ae3ce1f9fd284c45f47fcf73f4596a78b93e WHIRLPOOL 45cf28dc737829427dfaa9d698d1372e13de5243dfffe5a3f238f8b288012ef893430dedb58eb50ad35a6931cfa7a726c62f16414a69e9a0a270025d3b3e017a
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+DIST MARC-XML-1.0.3.tar.gz 18204 SHA256 0f5f2a99a9850f30812cb06807b43b3e27999d92e4ca64903b2a8b8587df6c5f SHA512 a460388c92ac8c6c285b40d1ec2cfc4d86177c9a35854a8da17ac16349f952af37f57e00fce4091546f8225757addd1ee4c16862334c6d59b712395b284661a9 WHIRLPOOL 62d3a7ce54ddce853c460cd52687739135a71be9ef2ee64776af6912aa5f2611a81a89bdd82b654749ca1c56f91ff7159fbefd1b12a0a10eee57d626581224e2
+EBUILD MARC-XML-1.000.300.ebuild 532 SHA256 39b1cf0377771d21dd3d4938d6d6dfe332333bf5aa7bf8c0a4defa274755eb47 SHA512 7f5afd31ba0fdc724ddd225e67b92985313ebbf37ca1e6e05be600990f3101d58930caff07f62ebd0590ef0fc3435f70bcbdb2d421f2f1c83f7a106675da7857 WHIRLPOOL 471c9ed1bbe714ff731717a9a8fd4e25f68e487f474f7edb3f6a024d521813781c45a763a1f6996064a861a109751a6efefd198d89961bce8a38910684a73db2
+MISC ChangeLog 1637 SHA256 3d617e44c2419d324172c58ac1aabbbab4459a68e0763be6af89d20798decb0e SHA512 78fd4ba2c7863cec22731bb25c8ad84933831b4a897caae35ba0f446a835305543edf7f77af6ba1605f162a53e9dc29ea198bf4da037899f2f70965e2b30c754 WHIRLPOOL 3eca77a1fb8c60b3b67c6618633d73155187d75d5704c701c065b51334c2eafcf809339d563845bd4d07f9f885726102395a86b7847983d0f6038bd47efa5423
 MISC metadata.xml 358 SHA256 84e5bbe0f964dfb0104c4ec0121f4ca411bbe6678f97229426afe44214076c87 SHA512 e5521b752c3f9a25fb7d666e1f67aa0c049447c174c893a4d264c26b8b11db62cdbf97c6ef27a2423499fcaae12b8dd8f5b49699b57a1117a62e3e4d7d6e7040 WHIRLPOOL 42654b6f918aeaf6197559e7be315a39dd7766310b8f35b007125c225cf279dcacc47de0824ca842034634cb6d81d1e32b049b8fc4505c8c2e3a9bc8f56c550e
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+
+iJwEAQEIAAYFAlLhT6QACgkQG9wOWsQutdZnIwP/WGOj6rj/SJtwq3vlPYxY0W49
+tqfKYe+2niH4v0gapGVhj+gpyf3wRxz4w5hzKQwWAdTeh6M3ZabgDBANJcBV818K
+sfinv3c6rbsOa8fGo4WQXzR9CEeXZNEnZmVVllYdyDbnxn3wNZ6yUldlQSBXKPOJ
+pVR9j6mlIWqB2BCwSOY=
+=7IpG
+-----END PGP SIGNATURE-----
