@@ -1,12 +1,12 @@
 DEFINED_PHASES=compile configure install prepare test unpack
-DEPEND=dev-perl/XML-SAX dev-perl/XML-LibXML dev-perl/MARC-Charset dev-perl/MARC-Record || ( >=dev-lang/perl-5.16 <dev-lang/perl-5.16[-build] )
+DEPEND=dev-perl/XML-SAX dev-perl/XML-LibXML dev-perl/MARC-Charset dev-perl/MARC-Record dev-lang/perl:=[-build(-)]
 DESCRIPTION=A subclass of MARC.pm to provide XML support
-EAPI=4
+EAPI=5
 HOMEPAGE=http://search.cpan.org/dist/MARC-XML/
 KEYWORDS=~amd64 ~ppc ~x86
 LICENSE=|| ( Artistic GPL-1 GPL-2 GPL-3 )
-RDEPEND=dev-perl/XML-SAX dev-perl/XML-LibXML dev-perl/MARC-Charset dev-perl/MARC-Record || ( >=dev-lang/perl-5.16 <dev-lang/perl-5.16[-build] )
+RDEPEND=dev-perl/XML-SAX dev-perl/XML-LibXML dev-perl/MARC-Charset dev-perl/MARC-Record dev-lang/perl:=[-build(-)]
 SLOT=0
-SRC_URI=mirror://cpan/authors/id/G/GM/GMCHARLT/MARC-XML-1.0.1.tar.gz
+SRC_URI=mirror://cpan/authors/id/G/GM/GMCHARLT/MARC-XML-1.0.3.tar.gz
 _eclasses_=base	ec46b36a6f6fd1d0b505a33e0b74e413	eutils	40081e8c7e7f7c4f9db349a1d6d52925	multilib	fac675dcccf94392371a6abee62d909f	multiprocessing	c2d96fb38f2596209e98fceda58ba1ed	perl-module	1d50a6ea2d8d319e3205b005b3ed0dfa	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
-_md5_=30adbc2f32125cb9a67e4b65a41001e3
+_md5_=1e29a6433c67642f335e302c41d940aa
