@@ -1,6 +1,9 @@
 # ChangeLog for sys-fs/go-mtpfs
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/go-mtpfs/ChangeLog,v 1.3 2013/10/21 03:02:23 zerochaos Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/go-mtpfs/ChangeLog,v 1.4 2014/01/23 17:16:38 zerochaos Exp $
+
+  23 Jan 2014; Rick Farina <zerochaos@gentoo.org> go-mtpfs-9999.ebuild:
+  horrible, horrible update, that happens to build on hardened
 
   21 Oct 2013; Rick Farina <zerochaos@gentoo.org> go-mtpfs-9999.ebuild:
   breaking things up and adding tests
